fix: change visibility styles at closest number game

--- a/src/pages/ClosestNumber/ClosestNumber.module.scss
+++ b/src/pages/ClosestNumber/ClosestNumber.module.scss
@@ -103,17 +103,19 @@
   @include indents($space-16, 0);
   @include size(100%, 20vh);
   @include min-size(100%, 146px);
-  @include position(absolute, $bottom: 0, $left: 50%);
+  @include position(fixed, $bottom: 0, $left: 50%);
   @include flex(column, center, center, $space-6);
-  transform: translate(-50%);
+  transform: translate(-50%, 0);
   background-color: $closest-secondary-color;
   border-top-left-radius: 32px;
   border-top-right-radius: 32px;
-  transition: height 1s ease-in-out;
+  transition: all .7s ease-in-out;
   box-sizing: border-box;
   box-shadow: inset 0 5px 0 0 rgba(0, 0, 0, 0.2);
   z-index: 666;
-  visibility: visible;
+  will-change: transform, height;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 
   @media screen and (max-height: 600px) {
     gap: $space-6;
@@ -232,7 +234,6 @@
 
   &.expanded {
     @include size(100%, calc(100% - 47vh));
-    transition: height .5s ease-in-out;
     z-index: 666;
     overflow: visible;
 
